@@ -6,6 +6,7 @@ xx-01-21 Adrian Rossiter <adrian@antiprism.com>
             poly_form: rename from minmax, rename options, add -y
               for symmetry constraint, add -a e equal-edge algorithm
               and -a p planarisation
+            tetra59: generate the 59 tetrahedra with rational dihedral angles
          Changes
             to_nfold: add -x, -p to help with crossed models
             minmax: rename to poly_form
